--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@babel/core": "^7.20.5",
+    "axios": "^1.2.1",
+    "core-js": "^3.26.1",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
     "react-schedule-selector": "^3.0.0",
     "styled-components": "^5.3.6"
   },
